--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -68,5 +68,17 @@
       name: 'Playground - step 9',
       href: 'playground-step-9.html',
       progress: '100'
+    }, {
+      name: 'Upcoming Deal',
+      href: 'upcoming-deal.html',
+      progress: '1'
+    }, {
+      name: 'Upcoming Deal - Open',
+      href: 'upcoming-deal-open.html',
+      progress: '1'
+    }, {
+      name: 'Upcoming Deal - Deposit',
+      href: 'upcoming-deal-deposit.html',
+      progress: '1'
     }
   ];
