--- a/src/pug/shared/_script.pug
+++ b/src/pug/shared/_script.pug
@@ -3,6 +3,10 @@
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer")
 
+script(src='https://momentjs.com/downloads/moment.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.14/moment-timezone-with-data-2012-2022.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js')
+
 //script(src="js/vendor.js")
 script(src="js/app.js")
 
