--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,3 +46,5 @@
 @import "_components/venture/venture";
 @import "_components/venture/deals";
 @import "_components/venture/closed";
+
+@import "_components/upcoming-deal/upcoming";
