--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -838,6 +838,224 @@ picture {
   color: #FFFFFF;
 }
 
+.c-modal#upcomingDeposit {
+  width: 100%;
+  max-width: 547px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 30px 50px;
+  border: 1px solid #FFFFFF;
+  background-color: #1E1A22;
+}
+.c-modal#upcomingDeposit .mfp-close {
+  opacity: 1;
+  color: #ffffff;
+}
+.c-modal#upcomingDeposit .c-modal__title {
+  padding-bottom: 8px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.c-modal#upcomingDeposit .c-modal__line {
+  width: 40px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 32px;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.c-modal#upcomingDeposit .c-modal__clear {
+  padding-left: 20px;
+  padding-right: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.c-modal#upcomingDeposit .c-modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 387px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.c-modal#upcomingDeposit .c-modal__form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.c-modal#upcomingDeposit .c-modal__form-group .c-modal__form-field {
+  margin-bottom: 0;
+}
+.c-modal#upcomingDeposit .c-modal__form-group > div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .c-modal#upcomingDeposit .c-modal__form-group > div {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+}
+.c-modal#upcomingDeposit .c-modal__form-group > div:not(:last-of-type) {
+  margin-right: 12px;
+}
+@media screen and (max-width: 767px) {
+  .c-modal#upcomingDeposit .c-modal__form-group > div:not(:last-of-type) {
+    margin-right: 0;
+    margin-bottom: 17px;
+  }
+}
+.c-modal#upcomingDeposit .c-modal__form-field {
+  position: relative;
+  margin-bottom: 34px;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label .c-dropdown__wrapper {
+  max-width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .c-modal#upcomingDeposit .c-modal__form-field label .c-dropdown__toggle span {
+    display: block;
+  }
+}
+.c-modal#upcomingDeposit .c-modal__form-field label > img {
+  position: absolute;
+  top: 10px;
+  left: 16px;
+  display: block;
+  max-width: 20px;
+  height: auto;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label > img + input {
+  padding-left: 52px;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input {
+  outline: none;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 0 15px;
+  margin: 0;
+  border-radius: 4px;
+  border: 1px solid #4C4355;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input.placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input:-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+.c-modal#upcomingDeposit .c-modal__form-field label input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #F1F1F2;
+}
+@media screen and (max-width: 767px) {
+  .c-modal#upcomingDeposit .c-modal__form-field label input {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    min-width: 1px;
+    max-width: 100%;
+  }
+}
+.c-modal#upcomingDeposit .c-modal__form-field .c-btn {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+}
+.c-modal#upcomingDeposit .c-modal__form-field .c-btn__wrapper {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 12px;
+}
+.c-modal#upcomingDeposit .c-modal__form-label {
+  padding-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.c-modal#upcomingDeposit .c-modal__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.c-modal#upcomingDeposit .c-modal__info hr {
+  width: 40px;
+  height: 2px;
+  margin-bottom: 16px;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 5px;
+  background-color: #DF1931;
+}
+.c-modal#upcomingDeposit .c-modal__info p {
+  font-weight: 300;
+  font-size: 14px;
+  color: #FFFFFF;
+}
+
 .mfp-zoom-in .mfp-with-anim {
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
@@ -5150,7 +5368,10 @@ picture {
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  color: #807E82;
+  color: #F1F1F2;
+}
+.upcoming__countdown-btn .c-btn {
+  width: 100%;
 }
 .upcoming__countdown #upcomingCountdown {
   position: relative;
